[Anna] fix formatting for share page on Safari

--- a/src/components/organisms/ParticipateForm/ParticipateForm.css
+++ b/src/components/organisms/ParticipateForm/ParticipateForm.css
@@ -1,5 +1,6 @@
 .ParticipateForm {
     position: relative;
+    margin-bottom: 10px;
 }
 
 .ParticipateForm .InstructionBold {
