--- a/src/components/organisms/ShareLocation/ShareLocation.css
+++ b/src/components/organisms/ShareLocation/ShareLocation.css
@@ -1,3 +1,4 @@
+
 .map{
     width: 100% !important;
     height: 50vh !important;
@@ -9,6 +10,7 @@
     font-weight: bold;
     font-size: 1.8em;
     padding-top: 15px;
+    margin-top: 10px;
     padding-bottom: 15px;
     position: relative;
 }
